manifests/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: yathishl
  labels:
    component: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: yathishl/api-server:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: yathishl
  labels:
    component: api
spec:
  selector:
    app: api-converter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
