manifests/counter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-deployment
  namespace: yathishl
  labels:
    component: counter
spec:
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
      - name: counter
        image: ghcr.io/adyanth/docker-k8s-final-assessment:counter-latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-counter
  namespace: yathishl
  labels:
    component: counter
spec:
  selector:
    app: counter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
